--- a/OCR and Translate/Base.lproj/Main.storyboard
+++ b/OCR and Translate/Base.lproj/Main.storyboard
@@ -817,6 +817,7 @@
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="RepeatCheck" destination="Jde-0S-UnR" id="bxi-EC-aru"/>
                         <outlet property="capturedImageVIew" destination="KdR-7s-jhP" id="haI-x5-QN6"/>
                         <outlet property="progressingIndicator" destination="T4i-cF-5WT" id="0Us-7T-NtB"/>
                         <outlet property="resultTextView" destination="w9O-UJ-uqG" id="XBI-dF-qHz"/>
@@ -857,7 +858,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mnb-2r-poM">
-                                <rect key="frame" x="60" y="90" width="49" height="17"/>
+                                <rect key="frame" x="60" y="79" width="49" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="API key" id="sUB-NQ-L2x">
                                     <font key="font" usesAppearanceFont="YES"/>
@@ -866,7 +867,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p4f-qH-djN">
-                                <rect key="frame" x="125" y="87" width="284" height="22"/>
+                                <rect key="frame" x="125" y="76" width="284" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Tw7-vb-FaA">
                                     <font key="font" metaFont="system"/>
@@ -878,7 +879,7 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EIf-ag-Olk">
-                                <rect key="frame" x="60" y="124" width="50" height="17"/>
+                                <rect key="frame" x="60" y="113" width="50" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Service" id="gqW-YS-YPQ">
                                     <font key="font" metaFont="system"/>
@@ -887,7 +888,7 @@
                                 </textFieldCell>
                             </textField>
                             <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gRl-Ck-4BI">
-                                <rect key="frame" x="123" y="119" width="132" height="25"/>
+                                <rect key="frame" x="123" y="108" width="132" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" title="Yandex" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="GFK-7n-2hl" id="nPt-Pu-epO">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -904,7 +905,7 @@
                                 </connections>
                             </popUpButton>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qw5-k6-5L8">
-                                <rect key="frame" x="60" y="58" width="153" height="17"/>
+                                <rect key="frame" x="60" y="47" width="153" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Repeat Intervel (second)" id="2PK-Im-0fO">
                                     <font key="font" metaFont="system"/>
@@ -913,7 +914,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VaF-2m-Tvu" userLabel="Interval Text Field">
-                                <rect key="frame" x="219" y="54" width="62" height="22"/>
+                                <rect key="frame" x="219" y="43" width="62" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="DV4-l7-gMy" userLabel="Text Field Cell">
                                     <font key="font" metaFont="system"/>
@@ -924,11 +925,33 @@
                                     <action selector="repeatIntervelTextEdited:" target="f5M-yq-ul7" id="ZaQ-Wj-hW7"/>
                                 </connections>
                             </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="83q-0C-i9B">
+                                <rect key="frame" x="60" y="147" width="98" height="17"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="OCR languages" id="IlD-1H-2Iz">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sAF-1X-Ptr">
+                                <rect key="frame" x="171" y="144" width="96" height="22"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="80z-OJ-9ri">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <connections>
+                                    <action selector="OCRLanguageTextEdited:" target="f5M-yq-ul7" id="Kx8-Jf-bsA"/>
+                                </connections>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
                         <outlet property="APIKeyTextField" destination="p4f-qH-djN" id="256-vs-F4W"/>
                         <outlet property="IntervalTextField" destination="VaF-2m-Tvu" id="wRY-kF-o5k"/>
+                        <outlet property="OCRLanguageTextField" destination="sAF-1X-Ptr" id="X5D-Nd-K2J"/>
                         <outlet property="ServiceSelectPopUpButton" destination="gRl-Ck-4BI" id="EE2-Nf-i1r"/>
                     </connections>
                 </viewController>
